add chatpanel, channelpanel and channellistitem

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" data-framework="typescript">
   <head>
     <meta charset="utf-8">
-    <title>React Chat</title>
+    <title>Pickle</title>
   </head>
   <body>
     <section class="chatapp"></section>
     </footer>
     <script type="text/javascript" src="node_modules/react/dist/react-with-addons.js"></script>
-    <script type="text/javascript" src="js/bundle.js"></script>
+    <script type="text/javascript" src="src/bundle.js"></script>
   </body>
 </html>
